--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,15 @@
 services:
-#  db:
-#    image: postgres:16
-#    volumes:
-#      - ./db:/var/lib/postgresql/data/pgdata
-#    ports:
-#      - "5432:5432"
-#    environment:
-#      - POSTGRES_USER=root
-#      - POSTGRES_DB=defaultdb
-#      - POSTGRES_PASSWORD=1
-#      - PGDATA=/var/lib/postgresql/data/pgdata
+  db:
+    image: postgres:16
+    volumes:
+      - ./db:/var/lib/postgresql/data/pgdata
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_DB=defaultdb
+      - POSTGRES_PASSWORD=1
+      - PGDATA=/var/lib/postgresql/data/pgdata
 
   app:
     build: .
